[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["green_mbtools", "green_mbtools.mint", "green_mbtools.pesto", "mbanalysis"]

[project]
name = "green-mbtools"
version = "0.2.2-beta"
authors = [
  { name="Sergei Iskakov", email="siskakov@umich.edu" },
  { name="Chia-Nan Yeh", email="cyeh@flatironinstitute.org" },
  { name="Gaurav Harsha", email="gharsha@umich.edu" },
  { name="Vibin Abraham", email="avibin@umich.edu" },
  { name="Pavel Pokhilko", email="pokhilko@umich.edu" },
]

description = "Collection of tools for quantum many-body simulation using Green Software Package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://green-phys.org"
Issues = "https://github.com/Green-Phys/green-python/issues"
